--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -10,8 +10,7 @@
     <SolidColorBrush x:Key="Brush.Contents" Color="White"/>
     <SolidColorBrush x:Key="Brush.Badge" Color="#FFAFAFAF"/>
     <SolidColorBrush x:Key="Brush.CommitViewer" Color="#FFF0F0F0"/>
-    <SolidColorBrush x:Key="Brush.GroupBar" Color="#FFE8E8E8"/>
-    <SolidColorBrush x:Key="Brush.GroupContent" Color="#FFF8F8F8"/>
+    <SolidColorBrush x:Key="Brush.SideBar" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Decorator" Color="#FFBDBDBD"/>
     <SolidColorBrush x:Key="Brush.Conflict" Color="#FF836C2E"/>
 
